--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <meta name=description content="Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod">
 <meta name=author content="Theme PaperMod">
 <link rel=canonical href=https://solamarpreet.github.io/>
-<link crossorigin=anonymous href=/assets/css/stylesheet.min.c88963fe2d79462000fd0fb1b3737783c32855d340583e4523343f8735c787f0.css integrity="sha256-yIlj/i15RiAA/Q+xs3N3g8MoVdNAWD5FIzQ/hzXHh/A=" rel="preload stylesheet" as=style>
+<link crossorigin=anonymous href=/assets/css/stylesheet.min.3fa6654168c9708a139cf5fa0aa8242988defdabc24d9e5bcd6a6ca9b05ba467.css integrity="sha256-P6ZlQWjJcIoTnPX6CqgkKYje/avCTZ5bzWpsqbBbpGc=" rel="preload stylesheet" as=style>
+<link rel=preload href=solpic.jpeg as=image>
 <link rel=icon href=https://solamarpreet.github.io/favicon.ico>
 <link rel=icon type=image/png sizes=16x16 href=https://solamarpreet.github.io/favicon-16x16.png>
 <link rel=icon type=image/png sizes=32x32 href=https://solamarpreet.github.io/favicon-32x32.png>
@@ -66,16 +67,10 @@
 </ul>
 </nav>
 </header>
-<main class=main>
-<article class="first-entry home-info">
-<header class=entry-header>
+<main class=main><div class=profile>
+<div class=profile_inner><img src=https://solamarpreet.github.io/solpic.jpeg alt="my image" height=150 width=150>
 <h1>Amarpreet Singh</h1>
-</header>
-<section class=entry-content>
-<p>Cybersecurity engineer with expertise in Python, DevSecOps, OSINT and Incident Response. I also love reading, swimming, table tennis & badminton.</p>
-</section>
-<footer class=entry-footer>
-<div class=social-icons>
+<span></span><div class=social-icons>
 <a href=https://github.com/adityatelange/hugo-PaperMod target=_blank rel="noopener noreferrer me" title=Github><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37.0 00-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44.0 0020 4.77 5.07 5.07.0 0019.91 1S18.73.65 16 2.48a13.38 13.38.0 00-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07.0 005 4.77 5.44 5.44.0 003.5 8.55c0 5.42 3.3 6.61 6.44 7A3.37 3.37.0 009 18.13V22"/></svg>
 </a>
 <a href=https://ko-fi.com/adityatelange target=_blank rel="noopener noreferrer me" title=KoFi><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 -3 23 27" fill="none" stroke="currentcolor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round"><path d="M23.881 8.948c-.773-4.085-4.859-4.593-4.859-4.593H.723c-.604.0-.679.798-.679.798s-.082 7.324-.022 11.822c.164 2.424 2.586 2.672 2.586 2.672s8.267-.023 11.966-.049c2.438-.426 2.683-2.566 2.658-3.734 4.352.24 7.422-2.831 6.649-6.916zm-11.062 3.511c-1.246 1.453-4.011 3.976-4.011 3.976s-.121.119-.31.023c-.076-.057-.108-.09-.108-.09-.443-.441-3.368-3.049-4.034-3.954-.709-.965-1.041-2.7-.091-3.71.951-1.01 3.005-1.086 4.363.407.0.0 1.565-1.782 3.468-.963 1.904.82 1.832 3.011.723 4.311zm6.173.478c-.928.116-1.682.028-1.682.028V7.284h1.77s1.971.551 1.971 2.638c0 1.913-.985 2.667-2.059 3.015z"/></svg>
@@ -83,70 +78,16 @@
 <a href=index.xml target=_blank rel="noopener noreferrer me" title=RsS><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 11a9 9 0 019 9"/><path d="M4 4a16 16 0 0116 16"/><circle cx="5" cy="19" r="1"/></svg>
 </a>
 </div>
-</footer>
-</article>
-<article class=post-entry>
-<header class=entry-header>
-<h2>Installation | Update
-</h2>
-</header>
-<section class=entry-content>
-<p>Read Install and Update instructions here</p>
-</section>
-<footer class=entry-footer><span title="2021-01-20 00:00:00 +0000 UTC">January 20, 2021</span>&nbsp;·&nbsp;4 min&nbsp;·&nbsp;Aditya Telange</footer>
-<a class=entry-link aria-label="post link to Installation | Update" href=https://solamarpreet.github.io/posts/papermod/papermod-installation/></a>
-</article>
-<article class=post-entry>
-<header class=entry-header>
-<h2>Features
-</h2>
-</header>
-<section class=entry-content>
-<p>Learn About All Features in PaperMod</p>
-</section>
-<footer class=entry-footer><span title="2021-01-20 00:00:00 +0000 UTC">January 20, 2021</span>&nbsp;·&nbsp;6 min&nbsp;·&nbsp;Aditya Telange</footer>
-<a class=entry-link aria-label="post link to Features" href=https://solamarpreet.github.io/posts/papermod/papermod-features/></a>
-</article>
-<article class=post-entry>
-<header class=entry-header>
-<h2>Markdown Syntax Guide For L2
-</h2>
-</header>
-<section class=entry-content>
-<p>This article offers a sample of basic Markdown syntax that can be used in Hugo content files, also it shows whether basic HTML elements are decorated with CSS in a Hugo theme.
-...</p>
-</section>
-<footer class=entry-footer><span title="2019-03-11 00:00:00 +0000 UTC">March 11, 2019</span>&nbsp;·&nbsp;3 min&nbsp;·&nbsp;Hugo Authors</footer>
-<a class=entry-link aria-label="post link to Markdown Syntax Guide For L2" href=https://solamarpreet.github.io/posts/markdown-syntax.fr/></a>
-</article>
-<article class=post-entry>
-<header class=entry-header>
-<h2>Markdown Syntax Guide For RTL
-</h2>
-</header>
-<section class=entry-content>
-<p>This article offers a sample of basic Markdown syntax that can be used in Hugo content files, also it shows whether basic HTML elements are decorated with CSS in a Hugo theme.
-...</p>
-</section>
-<footer class=entry-footer><span title="2019-03-11 00:00:00 +0000 UTC">March 11, 2019</span>&nbsp;·&nbsp;3 min&nbsp;·&nbsp;Hugo Authors</footer>
-<a class=entry-link aria-label="post link to Markdown Syntax Guide For RTL" href=https://solamarpreet.github.io/posts/markdown-syntax.fa/></a>
-</article>
-<article class=post-entry>
-<header class=entry-header>
-<h2>FAQs<sup><span class=entry-isdraft>&nbsp;&nbsp;[draft]</span></sup>
-</h2>
-</header>
-<section class=entry-content>
-<p>Frequently Asked Questions</p>
-</section>
-<footer class=entry-footer><span title="2021-01-20 00:00:00 +0000 UTC">January 20, 2021</span>&nbsp;·&nbsp;4 min&nbsp;·&nbsp;Aditya Telange</footer>
-<a class=entry-link aria-label="post link to FAQs" href=https://solamarpreet.github.io/posts/papermod/papermod-faq/></a>
-</article>
-<footer class=page-footer>
-<nav class=pagination>
-<a class=next href=https://solamarpreet.github.io/page/2/>Next Page »</a>
-</nav>
-</footer>
+<div class=buttons>
+<a class=button href=archives rel=noopener title=Blog>
+<span class=button-inner>Blog</span>
+</a>
+<a class=button href=tags rel=noopener title=Projects>
+<span class=button-inner>Projects</span>
+</a>
+</div>
+</div>
+</div>
 </main>
 <footer class=footer>
 <span>&copy; 2022 <a href=https://solamarpreet.github.io>Sol's Blog</a></span>
