--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
 <meta name=robots content="index, follow">
 <title>Sol's Blog</title>
-<meta name=description content="Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod">
-<meta name=author content="Theme PaperMod">
+<meta name=description content="Amarpreet Singh - Cybersecurity Engineer & Researcher">
+<meta name=author content="Amarpreet Singh">
 <link rel=canonical href=https://solamarpreet.github.io/>
-<link crossorigin=anonymous href=/assets/css/stylesheet.min.3fa6654168c9708a139cf5fa0aa8242988defdabc24d9e5bcd6a6ca9b05ba467.css integrity="sha256-P6ZlQWjJcIoTnPX6CqgkKYje/avCTZ5bzWpsqbBbpGc=" rel="preload stylesheet" as=style>
+<link crossorigin=anonymous href=/assets/css/stylesheet.min.6e6d829c2d463797ebbe2a9fea8b39391ce50b282013953205d05937a8e8dadc.css integrity="sha256-bm2CnC1GN5frviqf6os5ORzlCyggE5UyBdBZN6jo2tw=" rel="preload stylesheet" as=style>
 <link rel=preload href=solpic.jpeg as=image>
 <link rel=icon href=https://solamarpreet.github.io/favicon.ico>
 <link rel=icon type=image/png sizes=16x16 href=https://solamarpreet.github.io/favicon-16x16.png>
@@ -23,14 +23,14 @@
 <style>#theme-toggle,.top-link{display:none}</style>
 <style>@media(prefers-color-scheme:dark){:root{--theme:rgb(29, 30, 32);--entry:rgb(46, 46, 51);--primary:rgb(218, 218, 219);--secondary:rgb(155, 156, 157);--tertiary:rgb(65, 66, 68);--content:rgb(196, 196, 197);--hljs-bg:rgb(46, 46, 51);--code-bg:rgb(55, 56, 62);--border:rgb(51, 51, 51)}.list{background:var(--theme)}.list:not(.dark)::-webkit-scrollbar-track{background:0 0}.list:not(.dark)::-webkit-scrollbar-thumb{border-color:var(--theme)}}</style>
 </noscript><meta property="og:title" content="Sol's Blog">
-<meta property="og:description" content="Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod">
+<meta property="og:description" content="Amarpreet Singh - Cybersecurity Engineer & Researcher">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://solamarpreet.github.io/"><meta property="og:image" content="https://solamarpreet.github.io/papermod-cover.png">
 <meta name=twitter:card content="summary_large_image">
 <meta name=twitter:image content="https://solamarpreet.github.io/papermod-cover.png">
 <meta name=twitter:title content="Sol's Blog">
-<meta name=twitter:description content="Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod">
-<script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"Sol's Blog","url":"https://solamarpreet.github.io","description":"Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod","thumbnailUrl":"https://solamarpreet.github.io/favicon.ico","sameAs":["https://github.com/solamarpreet","https://www.linkedin.com","index.xml","mailto:solamarpreet@gmail.com"]}</script>
+<meta name=twitter:description content="Amarpreet Singh - Cybersecurity Engineer & Researcher">
+<script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"Sol's Blog","url":"https://solamarpreet.github.io","description":"Amarpreet Singh - Cybersecurity Engineer \u0026amp; Researcher","thumbnailUrl":"https://solamarpreet.github.io/favicon.ico","sameAs":["https://github.com/solamarpreet","https://www.linkedin.com","index.xml","mailto:solamarpreet@gmail.com"]}</script>
 </head>
 <body class=list id=top>
 <script>localStorage.getItem("pref-theme")==="dark"?document.body.classList.add('dark'):localStorage.getItem("pref-theme")==="light"?document.body.classList.remove('dark'):window.matchMedia('(prefers-color-scheme: dark)').matches&&document.body.classList.add('dark')</script>
