deploy: db63e3d0c167e9633883e22251d4940b40be2759

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 </noscript><meta property="og:title" content="Sol's Blog">
 <meta property="og:description" content="Amarpreet Singh - Cybersecurity Engineer & Researcher">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://solamarpreet.github.io/"><meta property="og:image" content="https://solamarpreet.github.io/papermod-cover.png">
+<meta property="og:url" content="https://solamarpreet.github.io/"><meta property="og:image" content="https://solamarpreet.github.io/solpic.png">
 <meta name=twitter:card content="summary_large_image">
-<meta name=twitter:image content="https://solamarpreet.github.io/papermod-cover.png">
+<meta name=twitter:image content="https://solamarpreet.github.io/solpic.png">
 <meta name=twitter:title content="Sol's Blog">
 <meta name=twitter:description content="Amarpreet Singh - Cybersecurity Engineer & Researcher">
 <script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"Sol's Blog","url":"https://solamarpreet.github.io","description":"Amarpreet Singh - Cybersecurity Engineer \u0026amp; Researcher","thumbnailUrl":"https://solamarpreet.github.io/favicon.ico","sameAs":["https://github.com/solamarpreet","https://www.linkedin.com","index.xml","mailto:solamarpreet@gmail.com"]}</script>
@@ -45,23 +45,28 @@
 </div>
 <ul id=menu>
 <li>
+<a href=https://solamarpreet.github.io/posts title=Posts>
+<span>Posts</span>
+</a>
+</li>
+<li>
 <a href=https://solamarpreet.github.io/archives title=Archive>
 <span>Archive</span>
 </a>
 </li>
 <li>
-<a href=https://solamarpreet.github.io/categories/ title=Categories>
-<span>Categories</span>
+<a href=https://solamarpreet.github.io/series title=Guides>
+<span>Guides</span>
+</a>
+</li>
+<li>
+<a href=https://solamarpreet.github.io/tags/ title="My Projects">
+<span>My Projects</span>
 </a>
 </li>
 <li>
 <a href=https://solamarpreet.github.io/search/ title="Search (Alt + /)" accesskey=/>
 <span>Search</span>
-</a>
-</li>
-<li>
-<a href=https://solamarpreet.github.io/tags/ title=Tags>
-<span>Tags</span>
 </a>
 </li>
 </ul>
@@ -81,7 +86,7 @@
 </a>
 </div>
 <div class=buttons>
-<a class=button href=archives rel=noopener title=Blog>
+<a class=button href=posts rel=noopener title=Blog>
 <span class=button-inner>Blog</span>
 </a>
 <a class=button href=tags rel=noopener title=Projects>
