--- a/404.html
+++ b/404.html
@@ -23,9 +23,9 @@
 </noscript><meta property="og:title" content="404 Page not found">
 <meta property="og:description" content="Amarpreet Singh - Cybersecurity Engineer & Researcher">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://solamarpreet.github.io/404.html"><meta property="og:image" content="https://solamarpreet.github.io/papermod-cover.png">
+<meta property="og:url" content="https://solamarpreet.github.io/404.html"><meta property="og:image" content="https://solamarpreet.github.io/solpic.png">
 <meta name=twitter:card content="summary_large_image">
-<meta name=twitter:image content="https://solamarpreet.github.io/papermod-cover.png">
+<meta name=twitter:image content="https://solamarpreet.github.io/solpic.png">
 <meta name=twitter:title content="404 Page not found">
 <meta name=twitter:description content="Amarpreet Singh - Cybersecurity Engineer & Researcher">
 </head>
@@ -42,23 +42,28 @@
 </div>
 <ul id=menu>
 <li>
+<a href=https://solamarpreet.github.io/posts title=Posts>
+<span>Posts</span>
+</a>
+</li>
+<li>
 <a href=https://solamarpreet.github.io/archives title=Archive>
 <span>Archive</span>
 </a>
 </li>
 <li>
-<a href=https://solamarpreet.github.io/categories/ title=Categories>
-<span>Categories</span>
+<a href=https://solamarpreet.github.io/series title=Guides>
+<span>Guides</span>
+</a>
+</li>
+<li>
+<a href=https://solamarpreet.github.io/tags/ title="My Projects">
+<span>My Projects</span>
 </a>
 </li>
 <li>
 <a href=https://solamarpreet.github.io/search/ title="Search (Alt + /)" accesskey=/>
 <span>Search</span>
-</a>
-</li>
-<li>
-<a href=https://solamarpreet.github.io/tags/ title=Tags>
-<span>Tags</span>
 </a>
 </li>
 </ul>
