--- a/search/index.html
+++ b/search/index.html
@@ -24,9 +24,9 @@
 </noscript><meta property="og:title" content="Search">
 <meta property="og:description" content>
 <meta property="og:type" content="article">
-<meta property="og:url" content="https://solamarpreet.github.io/search/"><meta property="og:image" content="https://solamarpreet.github.io/papermod-cover.png"><meta property="article:section" content>
+<meta property="og:url" content="https://solamarpreet.github.io/search/"><meta property="og:image" content="https://solamarpreet.github.io/solpic.png"><meta property="article:section" content>
 <meta name=twitter:card content="summary_large_image">
-<meta name=twitter:image content="https://solamarpreet.github.io/papermod-cover.png">
+<meta name=twitter:image content="https://solamarpreet.github.io/solpic.png">
 <meta name=twitter:title content="Search">
 <meta name=twitter:description content>
 <script type=application/ld+json>{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":2,"name":"Search","item":"https://solamarpreet.github.io/search/"}]}</script>
@@ -45,23 +45,28 @@
 </div>
 <ul id=menu>
 <li>
+<a href=https://solamarpreet.github.io/posts title=Posts>
+<span>Posts</span>
+</a>
+</li>
+<li>
 <a href=https://solamarpreet.github.io/archives title=Archive>
 <span>Archive</span>
 </a>
 </li>
 <li>
-<a href=https://solamarpreet.github.io/categories/ title=Categories>
-<span>Categories</span>
+<a href=https://solamarpreet.github.io/series title=Guides>
+<span>Guides</span>
+</a>
+</li>
+<li>
+<a href=https://solamarpreet.github.io/tags/ title="My Projects">
+<span>My Projects</span>
 </a>
 </li>
 <li>
 <a href=https://solamarpreet.github.io/search/ title="Search (Alt + /)" accesskey=/>
 <span class=active>Search</span>
-</a>
-</li>
-<li>
-<a href=https://solamarpreet.github.io/tags/ title=Tags>
-<span>Tags</span>
 </a>
 </li>
 </ul>
