--- a/series/index.html
+++ b/series/index.html
@@ -24,9 +24,9 @@
 </noscript><meta property="og:title" content="Series">
 <meta property="og:description" content="Amarpreet Singh - Cybersecurity Engineer & Researcher">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://solamarpreet.github.io/series/"><meta property="og:image" content="https://solamarpreet.github.io/papermod-cover.png">
+<meta property="og:url" content="https://solamarpreet.github.io/series/"><meta property="og:image" content="https://solamarpreet.github.io/solpic.png">
 <meta name=twitter:card content="summary_large_image">
-<meta name=twitter:image content="https://solamarpreet.github.io/papermod-cover.png">
+<meta name=twitter:image content="https://solamarpreet.github.io/solpic.png">
 <meta name=twitter:title content="Series">
 <meta name=twitter:description content="Amarpreet Singh - Cybersecurity Engineer & Researcher">
 </head>
@@ -43,23 +43,28 @@
 </div>
 <ul id=menu>
 <li>
+<a href=https://solamarpreet.github.io/posts title=Posts>
+<span>Posts</span>
+</a>
+</li>
+<li>
 <a href=https://solamarpreet.github.io/archives title=Archive>
 <span>Archive</span>
 </a>
 </li>
 <li>
-<a href=https://solamarpreet.github.io/categories/ title=Categories>
-<span>Categories</span>
+<a href=https://solamarpreet.github.io/series title=Guides>
+<span class=active>Guides</span>
+</a>
+</li>
+<li>
+<a href=https://solamarpreet.github.io/tags/ title="My Projects">
+<span>My Projects</span>
 </a>
 </li>
 <li>
 <a href=https://solamarpreet.github.io/search/ title="Search (Alt + /)" accesskey=/>
 <span>Search</span>
-</a>
-</li>
-<li>
-<a href=https://solamarpreet.github.io/tags/ title=Tags>
-<span>Tags</span>
 </a>
 </li>
 </ul>
@@ -71,10 +76,7 @@
 </header>
 <ul class=terms-tags>
 <li>
-<a href=https://solamarpreet.github.io/series/papermod/>PaperMod <sup><strong><sup>1</sup></strong></sup> </a>
-</li>
-<li>
-<a href=https://solamarpreet.github.io/series/themes-guide/>Themes Guide <sup><strong><sup>3</sup></strong></sup> </a>
+<a href=https://solamarpreet.github.io/series/themes-guide/>Themes Guide <sup><strong><sup>1</sup></strong></sup> </a>
 </li>
 </ul>
 </main>
