deploy: 67408670c743c7dca9844e9c124c680748eec4f6

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 </noscript><meta property="og:title" content="Sol's Blog">
 <meta property="og:description" content="Amarpreet Singh - Cybersecurity Engineer & Researcher">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://solamarpreet.github.io/"><meta property="og:image" content="https://solamarpreet.github.io/solpic.png">
+<meta property="og:url" content="https://solamarpreet.github.io/"><meta property="og:image" content="https://solamarpreet.github.io/solpic.jpeg">
 <meta name=twitter:card content="summary_large_image">
-<meta name=twitter:image content="https://solamarpreet.github.io/solpic.png">
+<meta name=twitter:image content="https://solamarpreet.github.io/solpic.jpeg">
 <meta name=twitter:title content="Sol's Blog">
 <meta name=twitter:description content="Amarpreet Singh - Cybersecurity Engineer & Researcher">
 <script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"Sol's Blog","url":"https://solamarpreet.github.io","description":"Amarpreet Singh - Cybersecurity Engineer \u0026amp; Researcher","thumbnailUrl":"https://solamarpreet.github.io/favicon.ico","sameAs":["https://github.com/solamarpreet","https://www.linkedin.com","index.xml","mailto:solamarpreet@gmail.com"]}</script>
