--- a/series/index.html
+++ b/series/index.html
@@ -24,9 +24,9 @@
 </noscript><meta property="og:title" content="Series">
 <meta property="og:description" content="Amarpreet Singh - Cybersecurity Engineer & Researcher">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://solamarpreet.github.io/series/"><meta property="og:image" content="https://solamarpreet.github.io/solpic.png">
+<meta property="og:url" content="https://solamarpreet.github.io/series/"><meta property="og:image" content="https://solamarpreet.github.io/solpic.jpeg">
 <meta name=twitter:card content="summary_large_image">
-<meta name=twitter:image content="https://solamarpreet.github.io/solpic.png">
+<meta name=twitter:image content="https://solamarpreet.github.io/solpic.jpeg">
 <meta name=twitter:title content="Series">
 <meta name=twitter:description content="Amarpreet Singh - Cybersecurity Engineer & Researcher">
 </head>
@@ -75,9 +75,6 @@
 <h1>Series</h1>
 </header>
 <ul class=terms-tags>
-<li>
-<a href=https://solamarpreet.github.io/series/themes-guide/>Themes Guide <sup><strong><sup>1</sup></strong></sup> </a>
-</li>
 </ul>
 </main>
 <footer class=footer>
