--- a/404.html
+++ b/404.html
@@ -23,9 +23,9 @@
 </noscript><meta property="og:title" content="404 Page not found">
 <meta property="og:description" content="Amarpreet Singh - Cybersecurity Engineer & Researcher">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://solamarpreet.github.io/404.html"><meta property="og:image" content="https://solamarpreet.github.io/solpic.png">
+<meta property="og:url" content="https://solamarpreet.github.io/404.html"><meta property="og:image" content="https://solamarpreet.github.io/solpic.jpeg">
 <meta name=twitter:card content="summary_large_image">
-<meta name=twitter:image content="https://solamarpreet.github.io/solpic.png">
+<meta name=twitter:image content="https://solamarpreet.github.io/solpic.jpeg">
 <meta name=twitter:title content="404 Page not found">
 <meta name=twitter:description content="Amarpreet Singh - Cybersecurity Engineer & Researcher">
 </head>
