--- a/search/index.html
+++ b/search/index.html
@@ -24,9 +24,9 @@
 </noscript><meta property="og:title" content="Search">
 <meta property="og:description" content>
 <meta property="og:type" content="article">
-<meta property="og:url" content="https://solamarpreet.github.io/search/"><meta property="og:image" content="https://solamarpreet.github.io/solpic.png"><meta property="article:section" content>
+<meta property="og:url" content="https://solamarpreet.github.io/search/"><meta property="og:image" content="https://solamarpreet.github.io/solpic.jpeg"><meta property="article:section" content>
 <meta name=twitter:card content="summary_large_image">
-<meta name=twitter:image content="https://solamarpreet.github.io/solpic.png">
+<meta name=twitter:image content="https://solamarpreet.github.io/solpic.jpeg">
 <meta name=twitter:title content="Search">
 <meta name=twitter:description content>
 <script type=application/ld+json>{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":2,"name":"Search","item":"https://solamarpreet.github.io/search/"}]}</script>
