--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name=description content="Amarpreet Singh - Cybersecurity Engineer & Researcher">
 <meta name=author content="Amarpreet Singh">
 <link rel=canonical href=https://solamarpreet.github.io/>
-<link crossorigin=anonymous href=/assets/css/stylesheet.min.6e6d829c2d463797ebbe2a9fea8b39391ce50b282013953205d05937a8e8dadc.css integrity="sha256-bm2CnC1GN5frviqf6os5ORzlCyggE5UyBdBZN6jo2tw=" rel="preload stylesheet" as=style>
+<link crossorigin=anonymous href=/assets/css/stylesheet.min.c4e39b51c6f183135b30decda75d1d897d9242703684a4155d13c8058beab908.css integrity="sha256-xOObUcbxgxNbMN7Np10diX2SQnA2hKQVXRPIBYvquQg=" rel="preload stylesheet" as=style>
 <link rel=preload href=solpic.jpeg as=image>
 <link rel=icon href=https://solamarpreet.github.io/favicon.ico>
 <link rel=icon type=image/png sizes=16x16 href=https://solamarpreet.github.io/favicon-16x16.png>
@@ -30,7 +30,7 @@
 <meta name=twitter:image content="https://solamarpreet.github.io/solpic.jpeg">
 <meta name=twitter:title content="Sol's Blog">
 <meta name=twitter:description content="Amarpreet Singh - Cybersecurity Engineer & Researcher">
-<script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"Sol's Blog","url":"https://solamarpreet.github.io","description":"Amarpreet Singh - Cybersecurity Engineer \u0026amp; Researcher","thumbnailUrl":"https://solamarpreet.github.io/favicon.ico","sameAs":["https://github.com/solamarpreet","https://www.linkedin.com","index.xml","mailto:solamarpreet@gmail.com"]}</script>
+<script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"Sol's Blog","url":"https://solamarpreet.github.io","description":"Amarpreet Singh - Cybersecurity Engineer \u0026amp; Researcher","thumbnailUrl":"https://solamarpreet.github.io/favicon.ico","sameAs":["https://github.com/solamarpreet","https://www.linkedin.com","index.xml","mailto:solamarpreet@protonmail.com"]}</script>
 </head>
 <body class=list id=top>
 <script>localStorage.getItem("pref-theme")==="dark"?document.body.classList.add('dark'):localStorage.getItem("pref-theme")==="light"?document.body.classList.remove('dark'):window.matchMedia('(prefers-color-scheme: dark)').matches&&document.body.classList.add('dark')</script>
@@ -43,7 +43,9 @@
 </button>
 </span>
 </div>
-<ul id=menu>
+<button id=menu-trigger aria-haspopup=menu aria-label="Menu Button"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-menu"><line x1="3" y1="12" x2="21" y2="12"/><line x1="3" y1="6" x2="21" y2="6"/><line x1="3" y1="18" x2="21" y2="18"/></svg>
+</button>
+<ul class="menu hidden">
 <li>
 <a href=https://solamarpreet.github.io/posts title=Posts>
 <span>Posts</span>
@@ -82,7 +84,7 @@
 </a>
 <a href=index.xml target=_blank rel="noopener noreferrer me" title=Rss><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 11a9 9 0 019 9"/><path d="M4 4a16 16 0 0116 16"/><circle cx="5" cy="19" r="1"/></svg>
 </a>
-<a href=mailto:solamarpreet@gmail.com target=_blank rel="noopener noreferrer me" title=Email><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 21" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1.0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1.0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><polyline points="22,6 12,13 2,6"/></svg>
+<a href=mailto:solamarpreet@protonmail.com target=_blank rel="noopener noreferrer me" title=Email><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 21" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1.0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1.0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><polyline points="22,6 12,13 2,6"/></svg>
 </a>
 </div>
 <div class=buttons>
@@ -106,6 +108,7 @@ Powered by
 </footer>
 <a href=#top aria-label="go to top" title="Go to Top (Alt + G)" class=top-link id=top-link accesskey=g><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 6" fill="currentcolor"><path d="M12 6H0l6-6z"/></svg>
 </a>
+<script>let b=document.querySelector("#menu-trigger"),m=document.querySelector(".menu");b.addEventListener("click",function(){m.classList.toggle("hidden")}),document.body.addEventListener('click',function(a){b.contains(a.target)||m.classList.add("hidden")}),document.querySelector("#cd").innerText=(new Date).getFullYear()</script>
 <script>let menu=document.getElementById('menu');menu&&(menu.scrollLeft=localStorage.getItem("menu-scroll-position"),menu.onscroll=function(){localStorage.setItem("menu-scroll-position",menu.scrollLeft)}),document.querySelectorAll('a[href^="#"]').forEach(a=>{a.addEventListener("click",function(b){b.preventDefault();var a=this.getAttribute("href").substr(1);window.matchMedia('(prefers-reduced-motion: reduce)').matches?document.querySelector(`[id='${decodeURIComponent(a)}']`).scrollIntoView():document.querySelector(`[id='${decodeURIComponent(a)}']`).scrollIntoView({behavior:"smooth"}),a==="top"?history.replaceState(null,null," "):history.pushState(null,null,`#${a}`)})})</script>
 <script>var mybutton=document.getElementById("top-link");window.onscroll=function(){document.body.scrollTop>800||document.documentElement.scrollTop>800?(mybutton.style.visibility="visible",mybutton.style.opacity="1"):(mybutton.style.visibility="hidden",mybutton.style.opacity="0")}</script>
 <script>document.getElementById("theme-toggle").addEventListener("click",()=>{document.body.className.includes("dark")?(document.body.classList.remove('dark'),localStorage.setItem("pref-theme",'light')):(document.body.classList.add('dark'),localStorage.setItem("pref-theme",'dark'))})</script>
