deploy: 9b3b3cb7717caa875e5e8c6b87d533132e7513b4

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html><html lang=en dir=auto>
-<head><meta charset=utf-8>
+<head>
+<meta name=generator content="Hugo 0.92.2"><meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
 <meta name=robots content="index, follow">
@@ -16,7 +17,6 @@
 <link rel=mask-icon href=https://solamarpreet.github.io/safari-pinned-tab.svg>
 <meta name=theme-color content="#2e2e33">
 <meta name=msapplication-TileColor content="#2e2e33">
-<meta name=generator content="Hugo 0.92.1">
 <link rel=alternate type=application/rss+xml href=https://solamarpreet.github.io/index.xml>
 <link rel=alternate type=application/json href=https://solamarpreet.github.io/index.json>
 <noscript>
@@ -57,7 +57,7 @@
 </a>
 </li>
 <li>
-<a href=https://solamarpreet.github.io/tags/ title="My Projects">
+<a href=https://solamarpreet.github.io/projects/ title="My Projects">
 <span>My Projects</span>
 </a>
 </li>
@@ -91,7 +91,7 @@
 <a class=button href=posts rel=noopener title=Blog>
 <span class=button-inner>Blog</span>
 </a>
-<a class=button href=tags rel=noopener title=Projects>
+<a class=button href=projects rel=noopener title=Projects>
 <span class=button-inner>Projects</span>
 </a>
 </div>
