deploy: 9971bc31c6e3eb0eefd061f1f9ef5f16ba7d5807

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 </a>
 </li>
 <li>
-<a href=https://solamarpreet.github.io/projects/ title="My Projects">
+<a href=https://solamarpreet.github.io/projects title="My Projects">
 <span>My Projects</span>
 </a>
 </li>
@@ -67,7 +67,7 @@
 </a>
 </li>
 <li>
-<a href=https://solamarpreet.github.io/search/ title="Search (Alt + /)" accesskey=/>
+<a href=https://solamarpreet.github.io/search title="Search (Alt + /)" accesskey=/>
 <span>Search</span>
 </a>
 </li>
