--- a/search/index.html
+++ b/search/index.html
@@ -56,7 +56,7 @@
 </a>
 </li>
 <li>
-<a href=https://solamarpreet.github.io/projects/ title="My Projects">
+<a href=https://solamarpreet.github.io/projects title="My Projects">
 <span>My Projects</span>
 </a>
 </li>
@@ -66,7 +66,7 @@
 </a>
 </li>
 <li>
-<a href=https://solamarpreet.github.io/search/ title="Search (Alt + /)" accesskey=/>
+<a href=https://solamarpreet.github.io/search title="Search (Alt + /)" accesskey=/>
 <span class=active>Search</span>
 </a>
 </li>
